Switch to java 9